--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
   "config": {
     "sort-packages": true
   },
+  "extra": {
+    "installer-name": "tomodomo-block-login-form"
+  },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
